--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
+    "@motionone/utils": "^10.18.0",
+    "@react-spring/web": "^9.7.4",
+    "antd": "^5.19.3",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.3.17",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
